--- a/store/templates/category.html
+++ b/store/templates/category.html
@@ -146,7 +146,7 @@
                 </div>
                 <div class="col-lg-3 order-lg-first mt-4 pt-2 mt-lg-0 pt-lg-0">
                     <div class="sidebar">
-                        <div class="widget">
+                         <div class="widget">
                             <h5 class="widget_title">Filter</h5>
                             <div class="filter_price">
                                 <div id="price_filter" data-min="0" data-max="500" data-min-value="50"
@@ -154,18 +154,17 @@
                                      class="ui-slider ui-corner-all ui-slider-horizontal ui-widget ui-widget-content">
                                     <div class="ui-slider-range ui-corner-all ui-widget-header"
                                          style="left: 10%; width: 50%;"></div>
-                                    <span tabindex="0"
-                                          class="ui-slider-handle ui-corner-all ui-state-default"
-                                          style="left: 10%;"></span><span tabindex="0"
-                                                                          class="ui-slider-handle ui-corner-all ui-state-default"
-                                                                          style="left: 60%;"></span>
+                                    <span tabindex="0" class="ui-slider-handle ui-corner-all ui-state-default" style="left: 10%;"></span>
+                                    <span tabindex="0" class="ui-slider-handle ui-corner-all ui-state-default" style="left: 60%;"></span>
                                 </div>
                                 <div class="price_range">
                                     <span>Price: <span id="flt_price">$50 - $300</span></span>
-                                    <input type="hidden" id="price_first">
-                                    <input type="hidden" id="price_second">
+                                    <input type="hidden" id="price_first" value="50"/>
+                                    <input type="hidden" id="price_second" value="300"/>
                                 </div>
                             </div>
+                            <button class="btn btn-fill-out btn-block" type="button"
+                                    onclick="filterByPrice()">Filter</button>
                         </div>
                         <div class="widget">
                             <h5 class="widget_title">Categories</h5>
@@ -325,4 +324,11 @@
     </div>
 
 </div>
+<script>
+    function filterByPrice() {
+        let minPrice = document.getElementById('price_first').value;
+        let maxPrice = document.getElementById('price_second').value;
+        window.location.href = `?min_price=${minPrice}&max_price=${maxPrice}`;
+    }
+</script>
 {% endblock %}
