--- a/store/templates/collection_detail.html
+++ b/store/templates/collection_detail.html
@@ -79,7 +79,7 @@
                                                     <!-- Add this hidden input -->
                                                 </form>
                                             </li>
-                                            <li><a href="{% url 'add_to_comparison' product.id %}"><i
+                                            <li><a href="{% url 'compare_products' product.pk %}"><i
                                                     class="icon-shuffle"></i></a></li>
                                             <li><a href="#" class="popup-ajax"><i
                                                     class="icon-magnifier-add"></i></a></li>
@@ -291,7 +291,7 @@
                                                     <!-- Add this hidden input -->
                                                 </form>
                                             </li>
-                                            <li><a href="{% url 'add_to_comparison' p.id %}"><i
+                                            <li><a href="{% url 'compare_products' p.pk %}"><i
                                                     class="icon-shuffle"></i></a></li>
                                             <li><a href="#" class="popup-ajax"><i
                                                     class="icon-magnifier-add"></i></a></li>
