--- a/store/templates/index.html
+++ b/store/templates/index.html
@@ -130,7 +130,7 @@
                                                     <!-- Add this hidden input -->
                                                 </form>
                                             </li>
-                                            <li><a href="{% url 'add_to_comparison' product.id %}"><i
+                                            <li><a href="{% url 'compare_products' product.pk %}"><i
                                                     class="icon-shuffle"></i></a></li>
                                             <li><a href="#" class="popup-ajax"><i
                                                     class="icon-magnifier-add"></i></a></li>
@@ -229,7 +229,7 @@
                                                     <!-- Add this hidden input -->
                                                 </form>
                                             </li>
-                                            <li><a href="{% url 'add_to_comparison' product.id %}"><i
+                                            <li><a href="{% url 'compare_products' product.pk %}"><i
                                                     class="icon-shuffle"></i></a></li>
                                             <li><a href="#" class="popup-ajax"><i
                                                     class="icon-magnifier-add"></i></a></li>
